--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "pnpm": ">=8.0.0"
   },
   "scripts": {
+    "class": "cd ./ClassUpdate && python ./replace.py LOCAL -y",
+    "sass": "sass ./app.scss ./betterdiscord/main.css --no-source-map",
     "build": "replugged build theme",
     "watch": "replugged build theme --watch",
     "bundle": "replugged bundle theme",
@@ -20,6 +22,6 @@
     "@parcel/core": "^2.8.3",
     "@types/node": "^18.15.11",
     "prettier": "^2.8.7",
-    "replugged": "^4.2.3"
+    "replugged": "^4.7.9"
   }
 }
