backwards compatibility changed key in 8648966b5c3f9c5471c82a59535a695972e2fa21, didnt realize that others would still have old key + added prettier ignore

--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "build": "replugged build theme",
     "watch": "replugged build theme --watch",
     "bundle": "replugged bundle theme",
-    "lint": "prettier ./stuff --check --config .prettierrc",
-    "lint:fix": "prettier ./stuff --write --config .prettierrc"
+    "lint": "prettier **/*.scss --check",
+    "lint:fix": "prettier **/*.scss --write"
   },
   "author": "Nyria",
   "license": "WTFPL",
