--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -21,5 +21,5 @@ jobs:
       - uses: EndBug/add-and-commit@v9
         with:
           default_author: github_actions
-          message: 'chore: build sass'
+          message: 'chore: build'
           fetch: true
