--- a/.github/workflows/classUpdate.yml
+++ b/.github/workflows/classUpdate.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Update
-        run: npm run classUpdate
+        run: npm run class
       - uses: EndBug/add-and-commit@v9
         with:
           default_author: github_actions
