class update triggers complie

--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -5,6 +5,10 @@ on:
   push:
     paths:
     - stuff/**
+  workflow_run:
+    workflows: ["Update Classes"]
+    types:
+      - completed
 
 jobs:
   compile:
