--- a/.github/workflows/classUpdate.yml
+++ b/.github/workflows/classUpdate.yml
@@ -2,7 +2,7 @@ name: Update Classes
 
 on:
   workflow_dispatch:
-  repository_dispatch:
+  repository_dispatch: #webhook trigger
     types: [update_class]
 
 jobs:
@@ -11,10 +11,16 @@ jobs:
     
     steps:
       - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
+        with:
+          repository: Metro420yt/ClassUpdate
+          ref: 4d21e388fac6f1c32c85caeefe1bad8cf1b742c4
+          path: classUpdate
       - name: Update
-        run: npm run class
+        run: python ./classUpdate/replace.py ./stuff -x=scss -y
       - uses: EndBug/add-and-commit@v9
         with:
+          add: ./stuff
           default_author: github_actions
           message: 'chore: update classes'
           fetch: true
