--- a/.github/workflows/classUpdate.yml
+++ b/.github/workflows/classUpdate.yml
@@ -8,19 +8,24 @@ on:
 jobs:
   classUpdate:
     runs-on: ubuntu-latest
-    
+
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/checkout@v4
+      - id: update
+        uses: metro420yt/class-update@v1-rc
         with:
-          repository: Metro420yt/ClassUpdate
-          ref: 4d21e388fac6f1c32c85caeefe1bad8cf1b742c4
-          path: classUpdate
-      - name: Update
-        run: python ./classUpdate/replace.py ./stuff -x=scss -y
+          folder: stuff
+          ext: scss
+
+      - uses: gha-utilities/sass-build@v0.6.0
+        if: ${{steps.update.outputs.totalChanges > 0}}
+        with:
+          source: ./app.scss
+          destination: ./betterdiscord/main.css
+          outputStyle: expanded
       - uses: EndBug/add-and-commit@v9
+        if: ${{steps.update.outputs.totalChanges > 0}}
         with:
-          add: ./stuff
           default_author: github_actions
-          message: 'chore: update classes'
+          message: "chore: update classes"
           fetch: true
