--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -4,16 +4,12 @@ on:
   workflow_dispatch:
   push:
     paths:
-    - stuff/**
-  workflow_run:
-    workflows: ["Update Classes"]
-    types:
-      - completed
+      - stuff/**
 
 jobs:
   compile:
     runs-on: ubuntu-latest
-    
+
     steps:
       - uses: actions/checkout@v4
       - name: Compile
@@ -25,5 +21,5 @@ jobs:
       - uses: EndBug/add-and-commit@v9
         with:
           default_author: github_actions
-          message: 'chore: build'
+          message: "chore: build"
           fetch: true
