--- a/.github/workflows/classUpdate.yml
+++ b/.github/workflows/classUpdate.yml
@@ -8,6 +8,9 @@ on:
 jobs:
   classUpdate:
     runs-on: ubuntu-latest
+    outputs:
+      changed: ${{steps.update.outputs.totalChanges > 0}}
+      commitSha: ${{steps.commit.outputs.commit_long_sha}}
 
     steps:
       - uses: actions/checkout@v4
@@ -24,8 +27,16 @@ jobs:
           destination: ./betterdiscord/main.css
           outputStyle: expanded
       - uses: EndBug/add-and-commit@v9
+        id: commit
         if: ${{steps.update.outputs.totalChanges > 0}}
         with:
           default_author: github_actions
           message: "chore: update classes"
           fetch: true
+
+  build:
+    needs: classUpdate
+    if: ${{needs.classUpdate.outputs.changed}}
+    uses: ./.github/workflows/gh-pages.yml
+    with:
+      sha: ${{needs.classUpdate.outputs.commitSha}}
