--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -3,6 +3,9 @@ name: Deploy GitHub Pages
 on:
   workflow_dispatch:
   workflow_call:
+    inputs:
+      sha:
+        type: string
   push:
     paths:
       - betterdiscord/**
@@ -21,6 +24,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          ref: ${{inputs.sha}}
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Build with Jekyll
