--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "class": "python ./ClassUpdate/replace.py -x=scss -y",
-    "dev": "nodemon -w \"./stuff\" -e scss -x \"sass ./app.scss \"%appdata%/Vencord/themes/_tmp/main.css\" --no-source-map\"",
+    "dev": "nodemon -w \"./stuff\" -w \"app.scss\" -e scss -x \"sass ./app.scss \"%appdata%/Vencord/themes/_tmp/main.css\" --no-source-map\"",
     "build": "sass ./app.scss ./betterdiscord/main.css --no-source-map --style expanded",
     "lint": "prettier **/*.scss --check",
     "lint:fix": "prettier **/*.scss --write"
