"active now" hover + colored select menu + only compile master

--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -9,6 +9,7 @@ on:
 
 jobs:
   compile:
+    if: github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
     outputs:
       commitSha: ${{steps.commit.outputs.commit_long_sha}}
