--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -3,13 +3,14 @@ name: Compile Sass
 on:
   workflow_dispatch:
   push:
+    branches:
+      - master
     paths:
       - src/**
       - "*.scss"
 
 jobs:
   compile:
-    if: github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
     outputs:
       commitSha: ${{steps.commit.outputs.commit_long_sha}}
